# CORAL

./: .gitattributes  .gitignore  CLAUDE.md  README.md  README_CN.md  findings.md  install.sh  pyproject.toml  rl_environment_selection_run_summary.md
artifacts/: rl-environment-selection-2026-06-26_033844-public-results.tar.zst
auto_rl_selection/: CLAUDE.md  export_env_inputs.py  plot_rescore.py  rescore_dev500.csv  rescore_experiment.py  rollout_scan.json  scan_env_map.py  scan_rollouts.py  scan_tasks.py  scan_tasks_bystep.py  task_bystep.json  task_scan.json
auto_rl_selection/CORAL_rl_env_selection/: probe_help.py  probe_install.py
auto_rl_selection/doc/: data_overview.md  eval_selection.py  selection_benchmark.md  task_difficulty.csv  task_difficulty_bystep.csv  task_env_map.csv  task_gt.csv  task_gt_dev300.csv
blog/: index.html
coral/: _version.py  config.py
coral/agent/: assignments.py  manager.py  runtime.py
coral/cli/: __init__.py  (+5 more)
examples/: README.md
examples/rl-env-selection-agentic/grader/: pyproject.toml
examples/rl-env-selection-agentic/grader/src/rl_env_selection_grader/: grader.py
tests/: test_assignments.py  test_cli_export.py  test_cli_island_scope.py  test_cli_log.py  test_config.py  test_creator_stamping.py  test_grader.py  test_grader_daemon.py  test_grader_env.py  test_hooks.py  test_islands.py  test_islands_runtime.py  test_manager_auto_stop.py  test_manager_reliability.py  test_manager_seen_attempts.py  test_migration.py  test_subprocess_grader.py  test_template.py  test_web_dag.py  test_web_multi_island.py  test_workspace.py
(+68 files in other folders)
