[project]
name = "rl-env-selection-grader"
version = "0.1.0"
description = "CORAL grader for the RL environment selection task (Signal Retention / mSR)."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_env_selection_grader"]
